--- a/css/move.css
+++ b/css/move.css
@@ -1,10 +1,10 @@
 #avatar {
-    position: relative;
+    position: absolute;
     background-size: 100%;
     background-repeat: no-repeat;
-    width: 100px;
-    height: 100px;
-    top: 402px;
+    width: 10%;
+    height: 14%;
+    top: 52%;
     animation-duration: 3s;
     animation-name: moveavat;
     animation-fill-mode: both;
@@ -13,10 +13,10 @@
 #dialogue{
     background-color: black;
     color: white;
-    position: relative;
-    width: 500px;
-    height: 100px;
-    top: 402px;
+    position: absolute;
+    width: 48%;
+    height: 13%;
+    top: 67%;
     animation-duration: 4s;
     animation-name: dialogue;
     animation-fill-mode: both;
