Commentaires interaction.js / modif style.css + ajout nouveau perso.png

--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ input {
 
 #perso {
     position: absolute;
-    background-image: url("../image/chevalier.png");
+    background-image: url("../image/chevaliere.png");
     background-size: contain;
     background-repeat: no-repeat;
     width: 70px;
