--- a/css/move.css
+++ b/css/move.css
@@ -1,3 +1,4 @@
+/*Image avatar */
 #avatar {
     position: absolute;
     background-size: 100%;
@@ -10,6 +11,7 @@
     animation-fill-mode: both;
 }
 
+/*div utiliser dans les batiments pour dialogue */
 #dialogue{
     background-color: black;
     color: white;
@@ -23,6 +25,8 @@
     overflow: auto;
 
 }
+
+/*Animation banniere et avatar des batiments  */
 
 @keyframes moveavat {
     from {
