--- a/css/style.css
+++ b/css/style.css
@@ -232,3 +232,24 @@ input {
 .nom_credit{
     text-align: center;
 }
+
+#ko_co {
+    background-image: url("../image/link_koco.gif");
+    width: 94%;
+    height: 10000%;
+    left : 2% ;
+    top : 1%;
+    position: absolute;
+    display: none;
+    background-repeat: inherit;
+}
+
+#txt_koco {
+    display: none;
+    height: 10%;
+    width: 10%;
+    bottom: -9952%;
+    position: absolute;
+    color : black;
+    font-size: 144px;
+}
